# BERTfluff

./: .gitignore  Makefile  MaskedLM.ipynb  README.md  bert_guesser.py  clustering.ipynb  context_bank.py  context_bank_sql.py  corp.txt  corp_tok.spl  corp_tok.tsv  flaskapp.py  freqs.csv  gensim_guesser.py  guessers.py  guessing_game.py  guessing_game_simple.py  helper.py  helper_functions.py  requirements.txt  setup.cfg  test_requests.py  tests.py  train_gensim.py
bertfluff/: __init__.py  __main__.py  bert_guesser.py  context_bank_file.py  context_bank_sql.py  flaskapp.py  gensim_guesser.py  guessing_game.py  helper.py  kenlm_guesser.py  trie.py
bertfluff/context_banks/: context_bank_file.py
bertfluff/guessers/: bert_guesser.py  gensim_guesser.py
bertfluff/utils/: prepare_corp.py  trie.py
create_corpus/: prepare_corp.py
paper_resources/: api.py  context_bank_mimic.py  generate_contexts.py  guess_human_db.py  guesser_comparator.py  main.py  monolith_code.py  run_context_requests.py  tactics.py
resources/: freqs.csv
src/bertfluff/: bert_guesser.py  flaskapp.py  gensim_guesser.py  guessing_game.py
utils/: misc.py  prepare_corp.py  trie.py
