[metadata]
name = bertfluff
version = 0.0.1
author = ELTE-DH
author_email = levai.daniel@btk.elte.hu
description = BERT-based guessing game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elte-dh/bertfluff/
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    gunicorn
    torch
    transformers
    flask
    numpy
    pandas
    gensim
    python-Levenshtein
    tqdm
    requests
    tabulate
    sqlalchemy
    kenlm @ https://github.com/kpu/kenlm/archive/master.zip#egg=kenlm

[options.packages.find]
where = bertfluff